test : PostMapperImpl-실패 케이스 검증